# Filler_Mk2

./: .gitignore  Cargo.toml  LICENSE  README.md  test.cpp
gui/: Cargo.toml
gui/src/: main.rs
gui/src/core/: controller.rs  eventloop.rs  mod.rs  renderer.rs
gui/src/screens/: game.rs  home.rs  mod.rs  player_select.rs
resources/players/: gsteyn_copy.filler  wseegers.filler
src/: app.rs  main.rs  manager.rs  piece.rs  plateau.rs  player_com.rs  rend.rs
src/cli/: arguments.rs  game_manager.rs  main.rs  util.rs
src/engine/: bot.rs  engine.rs  game_manager.rs  mod.rs  player_com.rs  player_error.rs  player_manager.rs  player_response.rs  replay.rs
src/gui/: button.rs  main.rs  mod.rs
src/gui/screens/: mod.rs
src/gui/src/: eventloop.rs
src/gui/src/screens/: home.rs
src/models/: constants.rs  game_info.rs  mod.rs  piece.rs  plateau.rs  player.rs  point.rs
src/models/plateau/: mod.rs  parser.rs
src/player_manager/: manager.rs  mod.rs  player_com.rs
