[package]
name = "filler_mk2"
version = "0.1.0"
authors = ["wseegers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
clap = "2"

conrod = { version = "0.61.1", features = ["winit", "glium"] }
conrod_derive = "0.1.2"
ttf-noto-sans = "0.1.1"
find_folder = "0.3.0"
