[package]
name = "filler_mk2"
version = "0.1.0"
authors = ["wseegers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
clap = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "fillercore"
path = "src/lib.rs"

[[bin]]
name = "filler_vm-cli"
path = "src/cli/main.rs"
