[package]
name = "filler_mk2"
version = "0.2.0"
authors = ["https://github.com/WSeegers, https://github.com/GJSteyn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
clap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.0"

[lib]
name = "fillercore"
path = "src/lib.rs"

[[bin]]
name = "filler_vm-cli"
path = "src/cli/main.rs"
