[package]
name = "gui"
version = "0.1.0"
authors = ["GJSteyn <36443537+GJSteyn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filler_mk2 = { path = "../../"}
conrod = { version = "0.61.1", features = ["winit", "glium"] }
conrod_derive = "0.1.2"
ttf-noto-sans = "0.1.1"
find_folder = "0.3.0"
