[package]
name = "gui"
version = "0.1.0"
authors = ["GJSteyn <36443537+GJSteyn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filler_mk2 = { path = "../"}
conrod = { version = "0.61.1", features = ["winit", "glium"] }
conrod_derive = "0.1.2"
ttf-noto-sans = "0.1.1"
find_folder = "0.3.0"
nfd = { git = "https://github.com/saurvs/nfd-rs.git" }

# Piston dependencies
rand = "*"
piston = "0.49.0"
piston2d-graphics = "0.33.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.66.0"
glium = "0.22.0-alpha1"
